--- a/.dapr/components/pubsub.yaml
+++ b/.dapr/components/pubsub.yaml
@@ -8,7 +8,7 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: redis-master.crud-app.svc.cluster.local:6379
+    value: redis-master:6379
   - name: redisPassword
     secretKeyRef:
       name: redis
