--- a/.dapr/components/state.yaml
+++ b/.dapr/components/state.yaml
@@ -7,11 +7,16 @@ spec:
   type: state.redis
   version: v1
   metadata:
+  # These settings will work out of the box if you use `helm install
+  # bitnami/redis`.  If you have your own setup, replace
+  # `redis-master:6379` with your own Redis master address, and the
+  # Redis password with your own Secret's name. For more information,
+  # see https://docs.dapr.io/operations/components/component-secrets .
   - name: redisHost
-    value: redis-master.crud-app.svc.cluster.local:6379
+    value: redis-master:6379
   - name: redisPassword
     secretKeyRef:
       name: redis
       key: redis-password
-  # scopes:
-  # - crud-app
+scopes:
+- crud-app
