--- a/.dapr/configuration.yaml
+++ b/.dapr/configuration.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   metric:
     enabled: true
-  tracing:
-    samplingRate: "1"
-    zipkin:
-      endpointAddress: "http://zipkin:9411/api/v2/spans"
+  # tracing:
+  #   samplingRate: "1"
+  #   zipkin:
+  #     endpointAddress: "http://zipkin:9411/api/v2/spans"
   mtls:
     allowedClockSkew: 15m
     enabled: true
