--- a/.dapr/components/state.yaml
+++ b/.dapr/components/state.yaml
@@ -2,7 +2,6 @@ apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
   name: statestore
-  namespace: crud-app
 spec:
   type: state.redis
   version: v1
@@ -21,3 +20,4 @@ spec:
 scopes:
 - crud-app
 - datagen-app
+- consumer-app
