--- a/.dapr/configuration.yaml
+++ b/.dapr/configuration.yaml
@@ -14,11 +14,11 @@ spec:
     enabled: true
     workloadCertTTL: 24h
   api:
-    allowed:
-    - name: state
-      version: v1
-      protocol: http
-    - name: publish
-      version: v1
-      protocol: http
+    # allowed:
+    # - name: state
+    #   version: v1
+    #   protocol: http
+    # - name: publish
+    #   version: v1
+    #   protocol: http
     # TODO enable service-to-service invocation and configure ACLs 
