--- a/deploy/service-a-app.yaml
+++ b/deploy/service-a-app.yaml
@@ -2,24 +2,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: errorgen-app-deployment
+  name: service-a
 spec:
   selector:
     matchLabels:
-      app: errorgen-app
+      app: service-a
   template:
     metadata:
       labels:
-        app: errorgen-app
+        app: service-a
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/app-id: "errorgen-app"
+        dapr.io/app-id: "service-a"
         dapr.io/config: dapr-crud-app
-        dapr.io/log-as-json: "true"
+        dapr.io/log-as-json: "false"
+        dapr.io/enable-api-logging: "true"
+        dapr.io/log-level: "debug"
     spec:
       containers:
-      - name: errorgen-app
-        image: docker.io/famargon/errorgen-63e653f34f2b5c9ee4123a4e50fd8d16:latest
+      - name: service-a
+        image: docker.io/famargon/service-a-877a6ee3f81467ac45450b736bd87aad:latest
         imagePullPolicy: Always
         resources:
           limits:
