--- a/deploy/consumer-app.yaml
+++ b/deploy/consumer-app.yaml
@@ -19,12 +19,17 @@ spec:
         dapr.io/config: dapr-crud-app
         dapr.io/app-protocol: grpc
         dapr.io/log-as-json: "true"
+        dapr.io/sidecar-cpu-request: "1m"
+        dapr.io/sidecar-memory-request: "12Mi"
+        dapr.io/sidecar-memory-limit: "36Mi"
     spec:
       containers:
       - name: app
         image: docker.io/famargon/consumer-12cf2b6a44aee014fafe9185282836fd:latest
         imagePullPolicy: Always
         resources:
+          requests:
+            cpu: "1m"
+            memory: "2Mi"
           limits:
-            memory: "128Mi"
-            cpu: "100m"
+            memory: "5Mi"
