crud-app load was too high add limits and settings Add maxItems and cleanupIntervalSeconds flags Limit number of todo items stored to reduce serialization overhead Dapr storage was creating index array at exponential rate filled with empty strings Add namespace to redis host in components, init was failing when deployed to different namespace than agent Makefile use APP_NAMESPACE env var on apply

--- a/.dapr/components/pubsub.yaml
+++ b/.dapr/components/pubsub.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1
   metadata:
   - name: redisHost
-    value: redis-master:6379
+    value: redis-master.crud-app:6379
   - name: redisPassword
     secretKeyRef:
       name: redis
