--- a/.dapr/components/state.yaml
+++ b/.dapr/components/state.yaml
@@ -12,7 +12,7 @@ spec:
   # Redis password with your own Secret's name. For more information,
   # see https://docs.dapr.io/operations/components/component-secrets .
   - name: redisHost
-    value: redis-master:6379
+    value: redis-master.crud-app:6379
   - name: redisPassword
     secretKeyRef:
       name: redis
